--- a/03_QGIS.html
+++ b/03_QGIS.html
@@ -359,11 +359,10 @@ div.tocify {
 <hr />
 <div id="overview" class="section level1">
 <h1>Overview</h1>
-<p>In this sessions students will learn the to manage and present
-spatial data using Geographical Information System (GIS) software.
-Session 1 introduces students to QGIS with session 2 replicating many of
-the exercises in R. Both QGIS and R software are free and
-open-source.</p>
+<p>In this session students will learn how to manage and present spatial
+data using Geographical Information System (GIS) software. Session 1
+introduces students to QGIS with session 2 replicating many of the
+exercises in R. Both QGIS and R software are free and open-source.</p>
 <p>QGIS is a popular alternative to paid GIS software and provides an
 interface with other open source GIS such as SAGA and GRASS. It has a
 large user base and extensive support options with easily accessible
@@ -375,8 +374,8 @@ pointing and clicking - and so are thought to be more user friendly.
 While a little advanced for this module it should be noted that you can
 run R commands in QGIS and also access QGIS processing functions from
 R.</p>
-<p>This tutorial will give step by step instructions that the students
-can use to follow along with the instructor.</p>
+<p>This tutorial will give step by step instructions that you can use to
+follow along with the instructor.</p>
 <hr />
 <div id="objectives-of-tutorial" class="section level2">
 <h2>Objectives of tutorial</h2>
@@ -399,13 +398,13 @@ information for most items.</p>
 hierarchical menu.</li>
 <li>Tool Bar: Provides access to most of the functions as the menus,
 plus additional tools for interacting with the map.</li>
-<li>Browser panel: Used to locate, inspect and add data to you project.
+<li>Browser panel: Used to locate, inspect and add data to your project.
 You are able to browse you own computer and additional resources</li>
 <li>Map View or Map canvas: The map displayed in this window will depend
 on the vector and raster layers you have chosen to load. Here you can
 interact with the map - move the maps, zoom in/out, select features
 etc</li>
-<li>Layers list: lists the layers that have are available in the current
+<li>Layers list: lists the layers that are available in the current
 project. Hovering over layers will give some basic information. Layers
 can be toggled on/off here and right clicking on a layer will give
 several additional options explored later in the tutorial.</li>
@@ -472,9 +471,9 @@ style="color:red">(3)</span>.</li>
 </ol>
 <p>You may have noticed in the left hand panel that there are many
 different types of data that can be added to the project. We use “Add
-Vector Layer” is for lines and polygons. Later in the tutorial we will
-also add point data as well as non-geographic tabular data (Delimited
-text) and raster data.</p>
+Vector Layer” this is for lines and polygons. Later in the tutorial we
+will also add point data as well as non-geographic tabular data
+(Delimited text) and raster data.</p>
 <p><img src="images/add_layer2.png" width="100%" style="display: block; margin: auto;" /></p>
 </p>
 </p>
@@ -486,8 +485,8 @@ text) and raster data.</p>
 src="images/open_data.png" />. The popup window will be the same as
 option one and so you will follow the same steps, just make sure
 “vector” is selected on the left hand side.</li>
-<li>From the “Browser panel” navigate to the folder the files where the
-files are located and to add double click on them.<br />
+<li>From the “Browser panel” navigate to the folder where the files are
+located and to add double click on them.<br />
 </li>
 <li>Finally you can simply drag and drop files directly from your
 computer folder into the map canvas or layers list</li>
@@ -639,7 +638,7 @@ style="padding:0.1em; background-color:#fee6ce; color:#404040">
 <span>
 <p style="margin-left:1em;">
 <ol style="list-style-type: decimal">
-<li>We will conduct basic selection useing the select features tool <img
+<li>We will conduct basic selection using the select features tool <img
 src="images/select_sh.png" />. First click on the icon</li>
 <li>On the map canvas you can click on individual features to select
 them. To select multiple features you can hold down the “ctrl” button on
@@ -648,7 +647,7 @@ will select all features that it touches. Note that the features you
 select will also be highlighted in the attribute table.</li>
 <li>Finally the simplest way to un-select features is to use the select
 tool <img src="images/select_sh.png" /> and click the white space off to
-the side of the shapefiles</li>
+the side of the shapefiles.</li>
 </ol>
 <p><img src="images/select.png" width="90%" style="display: block; margin: auto;" /></p>
 </p>
@@ -666,7 +665,7 @@ style="padding:0.1em; background-color:#fee6ce; color:#404040">
 <span>
 <p style="margin-left:1em;">
 <ol style="list-style-type: decimal">
-<li>To change color of the map either:
+<li>To change the color of the map either:
 <ul>
 <li>Double click on the layer in layers panel <span
 style="color:red">1</span></li>
@@ -696,7 +695,7 @@ style="color:red">6</span>.</li>
 and research. In the following example the points represent individual
 health facilities. In contrast to the polygon shapefiles we explored
 above, point data can be stored in a single spreadsheet file that
-contains latitude and longitude coordiantes for each point. Note that
+contains latitude and longitude coordinates for each point. Note that
 QGIS can only read delimited text files - the most common form being
 comma-separated vales (.CSV) files. <strong><em>If you are working with
 an excel spreadsheet you must first save it as a cvs before you can load
@@ -768,12 +767,12 @@ style="color:red">6</span>.</li>
 <h2>Optional Extra - Labeling</h2>
 <p>It is also possible to add labels to the map.</p>
 <ol style="list-style-type: decimal">
-<li>As before open the properties window.</li>
+<li>As before, open the properties window.</li>
 <li>Under the symbology symbol click on labels.</li>
 <li>Select “Single Labels” from the first dropdown menu.</li>
 <li>From the “Value” drop-down select which attribute you want to label
 the polygons with. For now select “hf”. This is the unique health
-facility id number.</li>
+facility ID number.</li>
 <li>Click “Apply” and “OK”</li>
 <li>There are many other style choices for text font, size, color,
 positioning etc that can be explored here - try a few of them. Note that
@@ -936,7 +935,7 @@ Layer Properties.</li>
 <p><img src="images/att_join.png" width="90%" style="display: block; margin: auto;" /></p>
 <p>Now open the attribute table of the FAK_HDs layer - what do you see?
 The annual_admin_data malaria data are now included in the FAK_HDs
-shapfile.</p>
+shapefile.</p>
 </p>
 </p>
 <p></span></p>
@@ -981,7 +980,7 @@ of high and low population density?</p>
 You can identify the value of an individual raster pixel by clicking the
 identification icon <img src="images/id_icon.png" /> and selecting an
 area of the raster. Currently it is difficult to identify variation in
-population as most of the raster looks black with few lighter coloured
+population as most of the raster looks black with a few lighter coloured
 pixels. We can modify the appearance by adjusting the symbology.</p>
 </p>
 </p>
@@ -1097,10 +1096,10 @@ decimal number.</li>
 out. Just type the field names however if you forget what they are
 called you can use the “fields and values” dropdown menu on the right.
 As you can see they are many other tools here we can use for
-calculation</li>
+calculation.</li>
 <li>When you are happy your formula is correct click OK.</li>
 <li>Navigate to the final column on the right of your attribute table -
-you should see a column for “api” has been added</li>
+you should see a column for “api” has been added.</li>
 </ol>
 <p><img src="images/field_calc2.png" width="80%" style="display: block; margin: auto;" /></p>
 <ol start="7" style="list-style-type: decimal">
@@ -1196,7 +1195,7 @@ will give the map some context. Let’s first add a legend. Click on the
 legend icon on the left <img src="images/leg.png" /> and then click and
 drag on the map where you want the legend.</p></li>
 <li><p>You will see all the items from the Layers panel in the legend -
-even those that are not visible in the map! We have to clean up the
+even those that are not visible on the map! We have to clean up the
 legend and remove labels. In the “Items list” make sure the legend is
 selected. From there go to the item properties and tick the check box
 “Only show items inside linked map”. This should reduce the legend down
@@ -1213,8 +1212,8 @@ Repeat this for all the items not useful in the legend</li>
 <ol start="10" style="list-style-type: decimal">
 <li><p>The legend uses the names of layers but these are not always
 informative. You can change these simply by double clicking on the label
-in the “Legend Items” panel. Try changeing the FAK_HDs label to
-something like “Number of confirmed malaria cases”</p></li>
+in the “Legend Items” panel. Try changing the FAK_HDs label to something
+like “Number of confirmed malaria cases”</p></li>
 <li><p>It should be noted that if you change the layers in the main QGIS
 project it will be reflected in the print composer. Let’s try this out -
 return to the main QGIS project window (do not close the print
@@ -1226,7 +1225,7 @@ it updates</p></li>
 <li><p>The map is starting to look better - try adding a North Arrow
 <img src="images/north.png" /> and a Scale Bar <img
 src="images/scale.png" />. Each item on the map has customization
-options that can be accessed fron the “Item properties” tab - try a few
+options that can be accessed from the “Item properties” tab - try a few
 of them out.</p></li>
 <li><p>Have you added a scale bar? Try to zoom in or out of the map with
 <img src="images/move.png" /> and see what happens to the scale
@@ -1240,17 +1239,17 @@ titles or labeling. Text, font size and style are all adjusted in the
 <li><p>Once you are happy with an item it is advisable to lock it into
 place. This will stop any accidental moving/zooming. From the items list
 - check the box next to “Map 1” with the little lock symbol.</p></li>
-<li><p>The previous step is mainly used to prevent unwanted moment. We
-can also lock-in the color symbology so that if you make changes to main
-map canvas the print layout remains the same. In the “Item properties”
-of the “Map 1” check the tickbox for “lock layers” and “lock styles for
-layers”.</p></li>
+<li><p>The previous step is mainly used to prevent unwanted movement. We
+can also lock-in the color symbology so that if you make changes to the
+main map canvas the print layout remains the same. In the “Item
+properties” of the “Map 1” check the tickbox for “lock layers” and “lock
+styles for layers”.</p></li>
 </ol>
 <p><img src="images/lock.png" width="90%" style="display: block; margin: auto;" /></p>
 <ol start="18" style="list-style-type: decimal">
 <li><p>Return to the main QGIS project and change the color scheme
-again. What has happens in the print composer now?</p></li>
-<li><p>There are many different items that can be added to you map such
+again. What has happened in the print composer now?</p></li>
+<li><p>There are many different items that can be added to your map such
 as arrows and tables - find out more <a
 href="https://docs.qgis.org/3.22/en/docs/user_manual/print_composer/composer_items/index.html">here</a></p></li>
 </ol>
@@ -1261,7 +1260,7 @@ report or publication.</p>
 <ol style="list-style-type: decimal">
 <li>To export the map, go to “Layout” and select “Export as image” (note
 that you can also choose pdf)</li>
-<li>Choose an appropriate name for the file save in the output
+<li>Choose an appropriate name for the file and save in the output
 folder.</li>
 <li>You will be prompted to pick a resolutions - 300 dpi is acceptable
 for most publications</li>
@@ -1311,11 +1310,11 @@ options are:</p>
 <h2>Attribute table editing</h2>
 <p>There are times we may identify errors in the attribute table and may
 need to correct them. There may also be unwanted columns that you want
-to tidy up. In the FAK_HDs_with_pop shapefiels we do not have a use for
+to tidy up. In the FAK_HDs_with_pop shapefields we do not have a use for
 the Pop_count and it can get confused with Pop_sum so it may be best to
 remove it.</p>
 <ol style="list-style-type: decimal">
-<li>Open the FAK_HDs_with_pop attribute table but right-clicking and
+<li>Open the FAK_HDs_with_pop attribute table by right-clicking and
 selecting <img src="images/att_table.png" /> 2.From the attribute table
 window select the toggle edit icon <img src="images/tog_edit.png" />
 from the top left corner - this allows edits to occur.</li>
@@ -1324,8 +1323,8 @@ src="images/del_col.png" /> symbol and simply scroll down and select the
 column to be deleted.</li>
 <li>While we have editing turned on you can also try to click individual
 cells of the attribute table. You will be given the option to change the
-cell contents and is a way to fix and small errors in your dataset.</li>
-<li>To turn of editing click the toggle symbol again <img
+cell contents and is a way to fix any small errors in your dataset.</li>
+<li>To turn off editing click the toggle symbol again <img
 src="images/tog_edit.png" />. You will be prompted to save or discard
 your changes - if you are happy click save. Now with the editing turned
 off try and select the cell contents - you will see it is no longer
@@ -1393,8 +1392,8 @@ location</li>
 <h2>Plugins</h2>
 <p>QGIS plugins offer additional functionality to the core QGIS software
 - much like packages in R. Many popular plugins have been encorporated
-into QGIS but there are still over 1000 addtional plugins available.
-Here we will look at how we can access the plugins and highight some of
+into QGIS but there are still over 1000 additional plugins available.
+Here we will look at how we can access the plugins and highlight some of
 the more popular plugins.</p>
 <ol style="list-style-type: decimal">
 <li>From the menu bar select “Plugins” and then “Manage and Install
@@ -1409,10 +1408,10 @@ access basemaps from Open Street Map, Google etc</li>
 <p><img src="images/plug_2.png" width="90%" style="display: block; margin: auto;" /></p>
 <ol start="3" style="list-style-type: decimal">
 <li>When you have found the plugin click install. Some plugins will
-apear in the menu bar but many will appear in the toolbar. For quick map
-services the tool icon is <img src="images/qms.png" />. CLick the icon
-and click OSM (open street map). The OSM basemap will appear on your map
-and in the layers list. Now you knwow where Fakeland is!</li>
+appear in the menu bar but many will appear in the toolbar. For quick
+map services the tool icon is <img src="images/qms.png" />. CLick the
+icon and click OSM (open street map). The OSM basemap will appear on
+your map and in the layers list. Now you know where Fakeland is!</li>
 </ol>
 <p><img src="images/plug_3.png" width="90%" style="display: block; margin: auto;" /></p>
 <ol start="4" style="list-style-type: decimal">
